--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
   <nav>
       <br><br>
     <ul>
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "All Image Links", image_links_path %></li>
-        <li><%= link_to "All Text Posts", text_posts_path %></li>
-        <li><%= link_to "All Article Link", article_links_path %></li>
+        <%= link_to "Home", root_path, class: 'button'  %>
+        <%= link_to "All Image Links", image_links_path, class: 'button' %>
+        <%= link_to "All Text Posts", text_posts_path, class: 'button'  %>
+        <%= link_to "All Article Links", article_links_path, class: 'button'  %>
 
         
   </ul>
