--- a/app/views/shared/_left_nav.html.erb
+++ b/app/views/shared/_left_nav.html.erb
@@ -10,7 +10,7 @@
       <tbody>
         <tr>
           <td>
-            <%= content_tag :h4, 'n' %>
+            <%= content_tag :h4, TextPost.count %>
             <%= content_tag :small, 'Posts', :class => "uppercase lighter" %>
           </td>
           <td>
