--- a/app/views/image_links/edit.html.erb
+++ b/app/views/image_links/edit.html.erb
@@ -1,4 +1,4 @@
-
+<p>Editing the Image Link: <strong><%= @image_link.title %></strong></p>
 <%= form_for(@image_link) do |f| %>
   <% if @errors %>
   <div id="error_explanation">
