--- a/app/views/image_links/index.html.erb
+++ b/app/views/image_links/index.html.erb
@@ -1,6 +1,8 @@
+<%= link_to "Create a New Image Link", new_image_link_path, class: 'button-small' %> 
 
 <% @image_links.each do |image_link| %>
   <%= content_tag :h1, image_link.title %>
   <%= content_tag :p, image_link.url %>
-  <%= link_to "Show", image_link_path(image_link) %> |
+  <%= link_to "Show", image_link_path(image_link), class: 'button-small' %>
+  <br>
 <% end %>
