--- a/app/views/text_posts/new.html.erb
+++ b/app/views/text_posts/new.html.erb
@@ -1,4 +1,4 @@
-<p>Your New Post:</p>
+<p>Creating a New Text Post</p>
 <%= form_for(@text_post) do |f| %>
   <div class="field">
     <%= f.label :content %><br>
