--- a/app/views/article_links/new.html.erb
+++ b/app/views/article_links/new.html.erb
@@ -1,8 +1,8 @@
-<p>Editing the Article Link: <strong><%= @article_link.title %></strong></p>
+
 <%= form_for(@article_link) do |f| %>
-    <% if @errors %>
+  <% if @errors %>
   <div id="error_explanation">
-    <h2><%= pluralize(@errors.count, "error") %> prohibited this Text Post from being saved:</h2>
+    <h2><%= pluralize(@errors.count, "error") %> prohibited this Image Link from being saved:</h2>
 
     <ul>
       <% @errors.full_messages.each do |message| %>
@@ -11,6 +11,7 @@
     </ul>
   </div>
 <% end %>
+<p>Create a New Article Link</p>
   <div class="field">
     <%= f.label :url %><br>
     <%= f.text_field :url %>
