--- a/app/views/image_links/new.html.erb
+++ b/app/views/image_links/new.html.erb
@@ -11,6 +11,7 @@
     </ul>
   </div>
 <% end %>
+<p>Create an Image Link</p>
   <div class="field">
     <%= f.label :url %><br>
     <%= f.text_field :url %>
