--- a/app/views/text_posts/index.html.erb
+++ b/app/views/text_posts/index.html.erb
@@ -1,7 +1,9 @@
+<%= link_to "Create a New Text Post", new_text_post_path, class: 'button-small' %> 
 
 <% @text_posts.each do |text_post| %>
   <%= content_tag :h1, text_post.title %>
   <%= content_tag :p, truncate(text_post.content, length: 140, separator: ' ') %>
-  <%= link_to "Show", text_post_path(text_post) %> |
+  <%= link_to "Show", text_post_path(text_post), class: 'button-small' %>
+  <br>
 <% end %>
 
