--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -243,7 +243,8 @@ ul {
 }
 
 .navbar-buttons {
-  margin-left: 33%;
+  width:100%;
+  margin-left: 32.5%;
 }
 
 #tumblful-footer {
@@ -251,4 +252,10 @@ ul {
   color:#FFF;
   padding-top: 2em;
   padding-bottom: 2em;
+  margin-top: 8.2em;
+}
+
+.tumblful-heart {
+  color: #FF7878;
+  font-size:1.5em;
 }
