--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div id="wrapper">
 <nav>
   <div class="nav-logo-link page-title">
     <center><h1 class="tumblful-header">
@@ -35,8 +36,9 @@
 </div>
 <br>
 <br>
+</div>
 <footer id="tumblful-footer">
-  <center>Thank you for using Tumblful.</center>
+  <center>Thank you for using <strong>tumblful</strong>.  <span class="tumblful-heart">&#9829</span></center>
 </footer>
 </body>
 </html>
