--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -250,12 +250,16 @@ ul {
 #tumblful-footer {
   background: #738AC4;
   color:#FFF;
-  padding-top: 2em;
-  padding-bottom: 2em;
-  margin-top: 8.2em;
+  padding: 1em;
+  margin-top: 8.3em;
 }
 
 .tumblful-heart {
   color: #FF7878;
   font-size:1.5em;
+}
+
+#wrapper {
+   min-height:100%;
+   position:relative;
 }
