--- a/app/views/article_links/index.html.erb
+++ b/app/views/article_links/index.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Create a New Article Link", new_article_link_path, class: 'button-small' %> 
 <% @article_links.each do |article_link| %>
   <%= content_tag :h1, article_link.title %>
-  <%= content_tag :p, article_link.url %>
+  <%= link_to article_link.url %><br><br>
   <%= link_to "Show", article_link_path(article_link), class: 'button-small' %>
   <br>
   <br>
