--- a/app/views/follows/index.html.erb
+++ b/app/views/follows/index.html.erb
@@ -1,5 +1,4 @@
-<%= render :partial => 'shared/left_nav' %>
-<h4>Who to follow</h4>
+<h4>Welcome Back to Tumblful!</h4>
 <p>Tumblful accounts in alpabetical order.</p>
 <hr />
 <ol>
