--- a/app/views/article_links/edit.html.erb
+++ b/app/views/article_links/edit.html.erb
@@ -19,8 +19,9 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+  <br>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit Edit", class:'button-small' %>
   </div>
   <br><br>
 <% end %>
