--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta charset="UTF-8">
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -39,7 +40,7 @@
 <br>
 </div>
 <footer id="tumblful-footer">
-  <center>Thank you for using <strong>tumblful</strong>.  <span class="tumblful-heart">&#9829</span></center>
+  <center>Thank you for using <strong>tumblful</strong>.  <span class="tumblful-heart">&hearts;</span></center>
 </footer>
 </body>
 </html>
