--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -307,3 +307,26 @@ ul {
   color: #FFF;
   background: #FF7878;
 }
+
+.button-signout {
+    color: #FFF;
+    font-size: .8em;
+    background: #212C45;
+    border: none;
+    padding: 2em;
+    text-decoration: none;
+    border-radius: 0;
+    transition: all .5s ease 0s;
+    cursor: pointer;
+    outline: 0;
+    margin-bottom: 1em;
+    margin-left: 80%;
+}
+
+.button-signout:hover {
+  color: #FF7878;
+}
+
+.button-signout:active {
+  color: #FFF;
+}
