Implemented delete feature. Tweaked CSS. Added material icons.

--- a/app/views/article_links/edit.html.erb
+++ b/app/views/article_links/edit.html.erb
@@ -21,7 +21,7 @@
   </div>
   <br>
   <div class="actions">
-    <%= f.submit "Submit Edit", class:'button-small' %>
+    <%= f.submit "save", class:'edit-button material-icons' %>
   </div>
   <br><br>
 <% end %>
