--- a/app/views/image_links/show.html.erb
+++ b/app/views/image_links/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @image_link.title %></h1>
 <p><%= image_tag @image_link.url, :class => "image-link-image thumbnail" %></p>
-<p><%= link_to "Edit", edit_image_link_path(@image_link), class: 'button-small' %>
-<%= link_to "Back", image_links_path, class: 'button-small'%></p>
+<%= link_to "edit", edit_image_link_path(@image_link), class: 'edit-button material-icons' %>
+<%= link_to "arrow_back", image_links_path, class: 'edit-button material-icons'%>
