Additional CSS tweak

--- a/app/views/follows/index.html.erb
+++ b/app/views/follows/index.html.erb
@@ -1,4 +1,4 @@
-<h4>Welcome Back to Tumblful!</h4>
+<h2>Welcome Back to Tumblful!</h2><br>
 <p>Tumblful accounts in alpabetical order.</p>
 <hr />
 <ol>
