Improved the ImageLinks index page using JavaScript. Now, if a user mouses over an image it expands to show them a larger version. When they mouse away, it shrinks back down to the thumbnail.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -372,3 +372,18 @@ ul {
   color: #FFF;
   background: #FFCA48;
 }
+
+.thumbnail {
+  width: 10em;
+  transition: all .5s ease 0s;
+}
+
+.large-image {
+  width: 30em;
+  -mox-box-shadow: 0 0 15px #bbb;
+  -webkit-box-shadow: 0 0 15px #bbb;
+  box-shadow: 0 0 15px #bbb;
+  transition: all .5s ease 0s;
+  }
+  
+  
