--- a/app/views/home/_sign_in.html.erb
+++ b/app/views/home/_sign_in.html.erb
@@ -1,3 +1,33 @@
+<h4>New to Tumblful? <span>Sign up</span></h4>
+<%= form_for resource, :url => user_registration_path,
+                       :builder => InlineErrorsBuilder,
+                       :method => :POST,
+                       :role => :form do |f| %>
+  <div>
+    <%= content_tag :div do %>
+      <%= f.text_field :name, :placeholder => "Full name" %>
+      <%= f.errors_for :name %>
+    <% end %>
+
+    <%= content_tag :div do %>
+      <%= f.text_field :username, :placeholder => "Username" %>
+      <%= f.errors_for :username %>
+    <% end %>
+
+    <%= content_tag :div do %>
+      <%= f.text_field :email, :placeholder => "Email" %>
+      <%= f.errors_for :email %>
+    <% end %>
+
+    <%= content_tag :div do %>
+      <%= f.password_field :password, :placeholder => "Password" %>
+      <%= f.errors_for :password %>
+    <% end %>
+
+    <%= f.submit "Sign up for Tumblful" %>
+  </div>
+<% end %>
+
 <%= form_for :user, :url => user_session_path,
                     :builder => InlineErrorsBuilder,
                     :method => :POST,
