--- a/app/views/home/_sign_in.html.erb
+++ b/app/views/home/_sign_in.html.erb
@@ -3,7 +3,7 @@
                        :builder => InlineErrorsBuilder,
                        :method => :POST,
                        :role => :form do |f| %>
-  <div>
+  <div id="sign_up_form">
     <%= content_tag :div do %>
       <%= f.text_field :name, :placeholder => "Full name" %>
       <%= f.errors_for :name %>
@@ -33,7 +33,7 @@
                     :method => :POST,
                     :role => :form do |f| %>
   <br />                  
-  <div>
+  <div id="sign_in_form">
     <%= content_tag :div do %>
       <%= f.text_field :email, :placeholder => "Username or email" %>
       <%= f.errors_for :email %>
