Updated Tumblful with feature spec
- Gemfile

- Gemfile.lock

- app/views/home/_sign_in.html.erb

- app/views/home/_sign_up.html.erb

- spec/features/user_logs_into_site_spec.rb

- spec/spec_helper.rb

--- a/app/views/home/_sign_in.html.erb
+++ b/app/views/home/_sign_in.html.erb
@@ -10,7 +10,7 @@
     <% end %>
 
     <%= content_tag :div do %>
-      <%= f.password_field :password, :placeholder => "Password" %>
+      <%= f.password_field :password, :placeholder => "Existing Password" %>
       <%= f.errors_for :password %>
       <%= f.submit "Sign in" %>
     <% end %>
