--- a/app/views/home/_sign_up.html.erb
+++ b/app/views/home/_sign_up.html.erb
@@ -20,7 +20,7 @@
     <% end %>
 
     <%= content_tag :div do %>
-      <%= f.password_field :password, :placeholder => "Password" %>
+      <%= f.password_field :password, :placeholder => "New Password" %>
       <%= f.errors_for :password %>
     <% end %>
 
